@@ -45,6 +45,15 @@ module Ruote
     attr_reader :context
     attr_reader :variables
 
+    # Creates an engine using either worker or storage.
+    #
+    # If a storage instance is given as the first argument, the engine will be
+    # able to manage processes (for example, launch and cancel workflows) but
+    # will not actually run any workflows.
+    #
+    # If a worker instance is given as the first argument and the second
+    # argument is true, engine will start the worker and will be able to both
+    # manage and run workflows.
     def initialize (worker_or_storage, run=true)
 
       @context = worker_or_storage.context
