@@ -55,6 +55,14 @@ module Ruote
     # This method is mostly used from the Ruote::Engine class (which includes
     # this mixin).
     #
+    # process_definition must be a result of Ruote.process_definition call
+    # or XML or JSON serialized process definition, as accepted by
+    # Ruote::Parser#parse.
+    #
+    # fields are workflow parameters that will be placed in workitem.fields.
+    #
+    # variables contain engine variables.
+    #
     def launch (process_definition, fields={}, variables={})
 
       wfid = @context.wfidgen.generate
