@@ -23,6 +23,6 @@
 #++
 
 module Ruote
-  VERSION = '2.1.10'
+  VERSION = '2.1.11'
 end
 
