@@ -250,8 +250,10 @@ class FtOnErrorTest < Test::Unit::TestCase
     #puts er.trace
 
     assert_equal 'err...', @tracer.to_s
-    assert_equal 4, workitem.error.size
+    assert_equal 5, workitem.error.size
     assert_equal 'RuntimeError', workitem.error[2]
+    assert_equal 'Beijing, we have a problem !', workitem.error[3]
+    assert_equal Array, workitem.error[4].class
     assert_equal true, workitem.fields['seen']
   end
 end
